--- a/dom/ejercicios/eventos/events.css
+++ b/dom/ejercicios/eventos/events.css
@@ -3,8 +3,8 @@
 }
 
 .focused{
-    outline: 2px ridge #9c2a50;
-    width:300px;
+    outline: 2px ridge #fd3b7c;
+    width:200px;
     height:30px;
 }
 
