--- a/dom/ejercicios/eventos/restaurant/style.css
+++ b/dom/ejercicios/eventos/restaurant/style.css
@@ -46,6 +46,7 @@ h2{
     align-items:center;
     margin-top:25px;
     flex-direction:column;
+    margin-bottom: 25px;
 }
 
 .tabla{
@@ -56,6 +57,7 @@ h2{
 .filas{
     border-bottom: 2px solid #eee;
     height:50px;
+    text-align:center;
     
 }
 
@@ -63,7 +65,7 @@ h2{
     color:#fff;
     background-color: #5CB85C;
     width: 80px;
-    height:30px;
+    height:40px;
     border-radius:5px;
     font-size: 18px;
     
@@ -73,7 +75,7 @@ h2{
     color:#fff;
     background-color: rgb(207, 34, 34);
     width: 80px;
-    height:30px;
+    height:40px;
     border-radius:5px;
     font-size: 18px;
     
@@ -83,7 +85,7 @@ h2{
     color:#fff;
     background-color: rgb(34, 95, 207);
     width: 120px;
-    height:30px;
+    height:40px;
     border-radius:5px;
     font-size: 15px;
     
@@ -91,6 +93,6 @@ h2{
 
 .texto{
     border: 2px solid rgb(192, 192, 192);
-    height: 30px;
+    height: 35px;
     border-radius: 5px;
 }
