--- a/dom/ejercicios/eventos/restaurant/style.css
+++ b/dom/ejercicios/eventos/restaurant/style.css
@@ -84,7 +84,7 @@ h2{
 .boton{
     color:#fff;
     background-color: rgb(34, 95, 207);
-    width: 120px;
+    width: 140px;
     height:40px;
     border-radius:5px;
     font-size: 15px;
@@ -95,4 +95,6 @@ h2{
     border: 2px solid rgb(192, 192, 192);
     height: 35px;
     border-radius: 5px;
+    padding-left:7px;
+    box-sizing: border-box;
 }
