agregadas funciones a cuenta

--- a/dom/ejercicios/eventos/restaurant/style.css
+++ b/dom/ejercicios/eventos/restaurant/style.css
@@ -83,7 +83,7 @@ h2{
 
 .boton{
     color:#fff;
-    background-color: rgb(34, 95, 207);
+    background-color: #337AB7;
     width: 140px;
     height:40px;
     border-radius:5px;
